--- a/package.json
+++ b/package.json
@@ -12,21 +12,37 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.6",
+    "@iconify-json/carbon": "^1.1.16",
     "@types/node": "^20.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "@unocss/eslint-config": "^0.52.3",
+    "@unocss/preset-attributify": "^0.52.3",
+    "@unocss/preset-icons": "^0.52.3",
+    "@unocss/preset-uno": "^0.52.3",
+    "@unocss/transformer-directives": "^0.52.3",
+    "@unocss/transformer-variant-group": "^0.52.3",
     "eslint": "^8.40.0",
     "eslint-plugin-vue": "^9.13.0",
+    "terser": "^5.17.6",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
+    "unplugin-vue-inspector": "^0.2.5",
     "unplugin-vue-macros": "^2.1.7",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-pages": "^0.30.1",
+    "vite-plugin-vue-inspector": "^3.4.2",
+    "vite-plugin-vue-layouts": "^0.8.0"
   },
   "dependencies": {
+    "@unocss/reset": "^0.52.3",
+    "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-vue2": "^2.2.0",
+    "@vueuse/core": "^10.1.2",
     "pinia": "^2.1.3",
+    "unocss": "^0.52.3",
     "vue": "2.7",
-    "vue-router": "3"
+    "vue-router": "3.6.5"
   }
 }
