--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-vue2": "^2.2.0",
     "@vueuse/core": "^10.1.2",
+    "consola": "^3.1.0",
     "pinia": "^2.1.3",
     "unocss": "^0.52.3",
     "vue": "2.7",
