--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "carapace",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "vite",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test --coverage": "vitest run --coverage"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.52.3",
+    "@vitejs/plugin-legacy": "^4.0.4",
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vueuse/core": "^10.1.2",
+    "consola": "^3.1.0",
+    "pinia": "^2.1.3",
+    "unocss": "^0.52.3",
+    "vue": "2.7",
+    "vue-router": "3.6.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.6",
@@ -33,17 +46,7 @@
     "vite": "^4.3.2",
     "vite-plugin-pages": "^0.30.1",
     "vite-plugin-vue-inspector": "^3.4.2",
-    "vite-plugin-vue-layouts": "^0.8.0"
-  },
-  "dependencies": {
-    "@unocss/reset": "^0.52.3",
-    "@vitejs/plugin-legacy": "^4.0.4",
-    "@vitejs/plugin-vue2": "^2.2.0",
-    "@vueuse/core": "^10.1.2",
-    "consola": "^3.1.0",
-    "pinia": "^2.1.3",
-    "unocss": "^0.52.3",
-    "vue": "2.7",
-    "vue-router": "3.6.5"
+    "vite-plugin-vue-layouts": "^0.8.0",
+    "vitest": "^0.31.1"
   }
 }
