style: split module config into several files

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
-    "dev": "vite",
+    "build": "vite build",
+    "dev": "vite --host --port 8080",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
