--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test --coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@ls-lint/ls-lint": "^2.1.0",
     "@unocss/reset": "^0.52.3",
     "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-vue2": "^2.2.0",
