--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "consola": "^3.1.0",
     "pinia": "^2.1.3",
     "unocss": "^0.52.3",
+    "vant": "^2.13.1",
     "vue": "2.7",
     "vue-router": "3.6.5"
   },
@@ -38,6 +39,7 @@
     "@unocss/transformer-variant-group": "^0.52.3",
     "eslint": "^8.40.0",
     "eslint-plugin-vue": "^9.13.0",
+    "less": "^4.2.0",
     "terser": "^5.17.6",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.0",
