--- a/package.json
+++ b/package.json
@@ -13,40 +13,41 @@
     "test --coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@unocss/reset": "^0.52.3",
-    "@vitejs/plugin-legacy": "^4.0.4",
-    "@vitejs/plugin-vue2": "^2.2.0",
-    "@vueuse/core": "^10.1.2",
-    "consola": "^3.1.0",
-    "pinia": "^2.1.3",
-    "unocss": "^0.52.3",
-    "vue": "2.7",
+    "@unocss/reset": "^0.57.7",
+    "@vitejs/plugin-legacy": "^4.1.1",
+    "@vitejs/plugin-vue2": "^2.3.1",
+    "@vueuse/core": "^10.6.1",
+    "consola": "^3.2.3",
+    "pinia": "^2.1.7",
+    "unocss": "^0.52.7",
+    "vue": "2.7.15",
     "vue-router": "3.6.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.6",
-    "@iconify-json/carbon": "^1.1.16",
-    "@types/node": "^20.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "@unocss/eslint-config": "^0.52.3",
-    "@unocss/preset-attributify": "^0.52.3",
-    "@unocss/preset-icons": "^0.52.3",
-    "@unocss/preset-uno": "^0.52.3",
-    "@unocss/transformer-directives": "^0.52.3",
-    "@unocss/transformer-variant-group": "^0.52.3",
-    "eslint": "^8.40.0",
-    "eslint-plugin-vue": "^9.13.0",
-    "terser": "^5.17.6",
-    "typescript": "^5.0.2",
-    "unplugin-auto-import": "^0.16.0",
+    "@antfu/eslint-config": "^2.0.0",
+    "@iconify-json/carbon": "^1.1.21",
+    "@types/node": "^20.9.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@unocss/eslint-config": "^0.57.7",
+    "@unocss/preset-attributify": "^0.57.7",
+    "@unocss/preset-icons": "^0.57.7",
+    "@unocss/preset-uno": "^0.57.7",
+    "@unocss/transformer-directives": "^0.57.7",
+    "@unocss/transformer-variant-group": "^0.57.7",
+    "eslint": "^8.54.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "taze": "^0.12.0",
+    "terser": "^5.24.0",
+    "typescript": "^5.3.2",
+    "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-inspector": "^0.2.5",
-    "unplugin-vue-macros": "^2.1.7",
-    "vite": "^4.3.2",
+    "unplugin-vue-macros": "^2.7.0",
+    "vite": "^5.0.2",
     "vite-plugin-pages": "^0.30.1",
-    "vite-plugin-vue-inspector": "^3.4.2",
+    "vite-plugin-vue-inspector": "^3.7.2",
     "vite-plugin-vue-layouts": "^0.8.0",
-    "vitest": "^0.31.1"
+    "vitest": "^0.31.4"
   }
 }
