--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "carapace",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "vite --host --port 8080",
@@ -19,7 +19,7 @@
     "@vueuse/core": "^10.6.1",
     "consola": "^3.2.3",
     "pinia": "^2.1.7",
-    "unocss": "^0.52.7",
+    "unocss": "^0.57.7",
     "vue": "2.7.15",
     "vue-router": "3.6.5"
   },
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@unocss/eslint-config": "^0.57.7",
+    "@unocss/eslint-plugin": "^0.57.7",
     "@unocss/preset-attributify": "^0.57.7",
     "@unocss/preset-icons": "^0.57.7",
     "@unocss/preset-uno": "^0.57.7",
