--- a/package.json
+++ b/package.json
@@ -13,39 +13,40 @@
     "test --coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@unocss/reset": "^0.57.7",
+    "@unocss/reset": "^0.59.0-beta.1",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue2": "^2.3.1",
-    "@vueuse/core": "^10.6.1",
+    "@vueuse/core": "^10.9.0",
     "consola": "^3.2.3",
     "pinia": "^2.1.7",
-    "unocss": "^0.57.7",
+    "unocss": "^0.59.0-beta.1",
     "vue": "2.7.15",
     "vue-router": "3.6.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.1.0",
-    "@iconify-json/carbon": "^1.1.21",
-    "@types/node": "^20.9.4",
+    "@antfu/eslint-config": "^2.11.6",
+    "@iconify-json/carbon": "^1.1.31",
+    "@types/node": "^20.12.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@unocss/eslint-config": "^0.57.7",
-    "@unocss/eslint-plugin": "^0.57.7",
-    "@unocss/preset-attributify": "^0.57.7",
-    "@unocss/preset-icons": "^0.57.7",
-    "@unocss/preset-uno": "^0.57.7",
-    "@unocss/transformer-directives": "^0.57.7",
-    "@unocss/transformer-variant-group": "^0.57.7",
-    "eslint": "^8.54.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "taze": "^0.12.0",
-    "terser": "^5.24.0",
-    "typescript": "^5.3.2",
+    "@unocss/eslint-config": "^0.59.0-beta.1",
+    "@unocss/eslint-plugin": "^0.59.0-beta.1",
+    "@unocss/preset-attributify": "^0.59.0-beta.1",
+    "@unocss/preset-icons": "^0.59.0-beta.1",
+    "@unocss/preset-uno": "^0.59.0-beta.1",
+    "@unocss/transformer-directives": "^0.59.0-beta.1",
+    "@unocss/transformer-variant-group": "^0.59.0-beta.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.24.0",
+    "taze": "^0.12.3",
+    "terser": "^5.30.1",
+    "typescript": "^5.4.3",
     "unplugin-auto-import": "^0.16.7",
+    "unplugin-compression": "^0.0.6",
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-inspector": "^0.2.5",
-    "unplugin-vue-macros": "^2.7.0",
-    "vite": "^5.0.2",
+    "unplugin-vue-macros": "^2.9.0",
+    "vite": "^5.2.7",
     "vite-plugin-pages": "^0.30.1",
     "vite-plugin-vue-inspector": "^3.7.2",
     "vite-plugin-vue-layouts": "^0.8.0",
