--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@unocss/transformer-variant-group": "^0.59.0-beta.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.24.0",
+    "lint-staged": "^15.2.2",
+    "simple-git-hooks": "^2.11.1",
     "taze": "^0.12.3",
     "terser": "^5.30.1",
     "typescript": "^5.4.3",
@@ -51,5 +53,8 @@
     "vite-plugin-vue-inspector": "^3.7.2",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vitest": "^0.31.4"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   }
 }
