--- a/package.json
+++ b/package.json
@@ -13,42 +13,42 @@
     "test --coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@unocss/reset": "^0.59.0-beta.1",
+    "@unocss/reset": "^0.59.0",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "consola": "^3.2.3",
     "pinia": "^2.1.7",
-    "unocss": "^0.59.0-beta.1",
+    "unocss": "^0.59.0",
     "vue": "2.7.15",
     "vue-router": "3.6.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.6",
+    "@antfu/eslint-config": "^2.12.2",
     "@iconify-json/carbon": "^1.1.31",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@unocss/eslint-config": "^0.59.0-beta.1",
-    "@unocss/eslint-plugin": "^0.59.0-beta.1",
-    "@unocss/preset-attributify": "^0.59.0-beta.1",
-    "@unocss/preset-icons": "^0.59.0-beta.1",
-    "@unocss/preset-uno": "^0.59.0-beta.1",
-    "@unocss/transformer-directives": "^0.59.0-beta.1",
-    "@unocss/transformer-variant-group": "^0.59.0-beta.1",
-    "eslint": "^8.57.0",
+    "@unocss/eslint-config": "^0.59.0",
+    "@unocss/eslint-plugin": "^0.59.0",
+    "@unocss/preset-attributify": "^0.59.0",
+    "@unocss/preset-icons": "^0.59.0",
+    "@unocss/preset-uno": "^0.59.0",
+    "@unocss/transformer-directives": "^0.59.0",
+    "@unocss/transformer-variant-group": "^0.59.0",
+    "eslint": "^9.0.0",
     "eslint-plugin-vue": "^9.24.0",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.1",
     "taze": "^0.12.3",
-    "terser": "^5.30.1",
-    "typescript": "^5.4.3",
+    "terser": "^5.30.3",
+    "typescript": "^5.4.4",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-compression": "^0.0.6",
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-inspector": "^0.2.5",
     "unplugin-vue-macros": "^2.9.0",
-    "vite": "^5.2.7",
+    "vite": "^5.2.8",
     "vite-plugin-pages": "^0.30.1",
     "vite-plugin-vue-inspector": "^3.7.2",
     "vite-plugin-vue-layouts": "^0.8.0",
