--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@antfu/eslint-config": "^2.12.2",
     "@iconify-json/carbon": "^1.1.31",
     "@types/node": "^20.12.5",
+    "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@unocss/eslint-config": "^0.59.0",
@@ -40,6 +41,7 @@
     "eslint": "^9.0.0",
     "eslint-plugin-vue": "^9.24.0",
     "lint-staged": "^15.2.2",
+    "nprogress": "^0.2.0",
     "simple-git-hooks": "^2.11.1",
     "taze": "^0.12.3",
     "terser": "^5.30.3",
