--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "consola": "^3.2.3",
+    "markdown-it-anchor": "^8.6.7",
     "pinia": "^2.1.7",
     "unocss": "^0.59.0",
     "vue": "2.7.15",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.12.2",
     "@iconify-json/carbon": "^1.1.31",
+    "@shikijs/markdown-it": "^1.3.0",
     "@types/node": "^20.12.5",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -50,6 +52,7 @@
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-inspector": "^0.2.5",
     "unplugin-vue-macros": "^2.9.0",
+    "unplugin-vue-markdown": "^0.26.0",
     "vite": "^5.2.8",
     "vite-plugin-pages": "^0.30.1",
     "vite-plugin-vue-inspector": "^3.7.2",
