--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-vue": "^9.24.0",
     "lint-staged": "^15.2.2",
     "nprogress": "^0.2.0",
+    "portal-vue": "^2.1.7",
     "simple-git-hooks": "^2.11.1",
     "taze": "^0.12.3",
     "terser": "^5.30.3",
