--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@antfu/eslint-config": "^2.12.2",
     "@iconify-json/carbon": "^1.1.31",
     "@shikijs/markdown-it": "^1.3.0",
+    "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/node": "^20.12.5",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -39,11 +40,15 @@
     "@unocss/preset-uno": "^0.59.0",
     "@unocss/transformer-directives": "^0.59.0",
     "@unocss/transformer-variant-group": "^0.59.0",
+    "bundle-require": "^4.0.2",
     "eslint": "^9.0.0",
+    "eslint-plugin-format": "^0.1.0",
+    "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-vue": "^9.24.0",
     "lint-staged": "^15.2.2",
     "nprogress": "^0.2.0",
     "portal-vue": "^2.1.7",
+    "prettier": "3.2.5",
     "simple-git-hooks": "^2.11.1",
     "taze": "^0.12.3",
     "terser": "^5.30.3",
