--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint:inspect": "nlx @eslint/config-inspector",
     "preview": "vite preview --host",
     "test": "vitest",
-    "test --coverage": "vitest run --coverage"
+    "test --coverage": "vitest run --coverage",
+    "prepare": "simple-git-hooks"
   },
   "dependencies": {
     "@unocss/reset": "^0.59.0",
-    "@vitejs/plugin-legacy": "^4.1.1",
+    "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "consola": "^3.2.3",
@@ -31,10 +32,10 @@
     "@iconify-json/carbon": "^1.1.31",
     "@shikijs/markdown-it": "^1.3.0",
     "@types/eslint-plugin-markdown": "^2.0.2",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "@unocss/eslint-config": "^0.59.0",
     "@unocss/preset-attributify": "^0.59.0",
     "@unocss/preset-icons": "^0.59.0",
@@ -51,21 +52,21 @@
     "portal-vue": "^2.1.7",
     "prettier": "3.2.5",
     "simple-git-hooks": "^2.11.1",
-    "taze": "^0.12.3",
+    "taze": "^0.13.3",
     "terser": "^5.30.3",
-    "typescript": "^5.4.4",
-    "unplugin-auto-import": "^0.16.7",
+    "typescript": "^5.4.5",
+    "unplugin-auto-import": "^0.17.5",
     "unplugin-compression": "^0.0.6",
-    "unplugin-vue-components": "^0.24.1",
-    "unplugin-vue-inspector": "^0.2.5",
-    "unplugin-vue-macros": "^2.9.0",
+    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-inspector": "^1.0.2",
+    "unplugin-vue-macros": "^2.9.1",
     "unplugin-vue-markdown": "^0.26.0",
     "vite": "^5.2.8",
-    "vite-plugin-pages": "^0.30.1",
-    "vite-plugin-vue-inspector": "^3.7.2",
-    "vite-plugin-vue-layouts": "^0.8.0",
-    "vite-plugin-webfont-dl": "^3.9.2",
-    "vitest": "^0.31.4"
+    "vite-plugin-pages": "^0.32.1",
+    "vite-plugin-vue-inspector": "^4.0.2",
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite-plugin-webfont-dl": "^3.9.3",
+    "vitest": "^1.5.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
