--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "vitest",
     "test --coverage": "vitest run --coverage",
     "up": "taze major -I",
-    "postinstall": "nlx simple-git-hooks"
+    "postinstall": "nlx simple-git-hooks",
+    "ls-lint": "ls-lint"
   },
   "dependencies": {
     "@unocss/reset": "^0.59.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.12.2",
     "@iconify-json/carbon": "^1.1.31",
+    "@ls-lint/ls-lint": "^2.2.3",
     "@shikijs/markdown-it": "^1.3.0",
     "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/node": "^20.12.7",
@@ -72,7 +74,7 @@
     "vitest": "^1.5.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "npx ls-lint && npx lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
