--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
-    "@unocss/eslint-config": "^0.59.0",
+    "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/preset-attributify": "^0.59.0",
     "@unocss/preset-icons": "^0.59.0",
     "@unocss/preset-uno": "^0.59.0",
@@ -48,6 +48,7 @@
     "@unocss/transformer-variant-group": "^0.59.0",
     "bundle-require": "^4.0.3",
     "eslint": "^9.0.0",
+    "eslint-plugin-command": "^0.1.2",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-vue": "^9.24.0",
