--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ls-lint": "ls-lint"
   },
   "dependencies": {
+    "@antfu/utils": "^0.7.7",
     "@unocss/reset": "^0.59.0",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue2": "^2.3.1",
