--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.0.5+sha512.a722575c18fd791f9ef71e387c6e16cc03c90d859b9b0998d0428ca0e3220828b32a96e6de73cea34edbc0f50824771b1a69c7ea36b86daa3b89c7e6d9a3d912",
+  "packageManager": "pnpm@9.0.6",
   "scripts": {
     "build": "vite build",
     "dev": "vite --host --port 8080",
@@ -59,7 +59,7 @@
     "portal-vue": "^2.1.7",
     "prettier": "3.2.5",
     "simple-git-hooks": "^2.11.1",
-    "taze": "^0.13.6",
+    "taze": "^0.13.7",
     "terser": "^5.30.4",
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.5",
@@ -72,8 +72,8 @@
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-inspector": "^5.0.1",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vite-plugin-webfont-dl": "^3.9.3",
-    "vitest": "^1.5.0"
+    "vite-plugin-webfont-dl": "^3.9.4",
+    "vitest": "^1.5.2"
   },
   "simple-git-hooks": {
     "pre-commit": "npx ls-lint && npx lint-staged"
