--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.0.6",
+  "packageManager": "pnpm@9.1.0",
   "scripts": {
     "build": "vite build",
     "dev": "vite --host --port 8080",
@@ -19,9 +19,9 @@
     "ls-lint": "ls-lint"
   },
   "dependencies": {
-    "@antfu/utils": "^0.7.7",
+    "@antfu/utils": "^0.7.8",
     "@unocss/reset": "^0.59.4",
-    "@vitejs/plugin-legacy": "^5.3.2",
+    "@vitejs/plugin-legacy": "^5.4.0",
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "consola": "^3.2.3",
@@ -33,24 +33,24 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.16.0",
-    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/carbon": "^1.1.32",
     "@ls-lint/ls-lint": "^2.2.3",
-    "@shikijs/markdown-it": "^1.3.0",
+    "@shikijs/markdown-it": "^1.5.1",
     "@types/eslint-plugin-markdown": "^2.0.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.11",
     "@types/nprogress": "^0.2.3",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/preset-attributify": "^0.59.4",
     "@unocss/preset-icons": "^0.59.4",
     "@unocss/preset-uno": "^0.59.4",
     "@unocss/transformer-directives": "^0.59.4",
     "@unocss/transformer-variant-group": "^0.59.4",
-    "bundle-require": "^4.0.3",
+    "bundle-require": "^4.1.0",
     "eslint": "^9.1.1",
     "eslint-plugin-format": "^0.1.1",
-    "eslint-plugin-markdown": "^4.0.1",
+    "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-vue": "^9.25.0",
     "https-localhost": "^4.7.1",
     "jsdom": "^24.0.0",
@@ -59,21 +59,23 @@
     "portal-vue": "^2.1.7",
     "prettier": "3.2.5",
     "simple-git-hooks": "^2.11.1",
-    "taze": "^0.13.7",
-    "terser": "^5.30.4",
+    "taze": "^0.13.8",
+    "terser": "^5.31.0",
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-compression": "^0.0.6",
-    "unplugin-vue-components": "^0.26.0",
-    "unplugin-vue-inspector": "^2.0.1",
-    "unplugin-vue-macros": "^2.9.1",
+    "unplugin-create-dir": "^0.1.1",
+    "unplugin-limit-files": "^0.2.0",
+    "unplugin-vue-components": "^0.27.0",
+    "unplugin-vue-inspector": "^2.1.0",
+    "unplugin-vue-macros": "^2.9.2",
     "unplugin-vue-markdown": "^0.26.2",
     "vite": "^5.2.10",
     "vite-plugin-pages": "^0.32.1",
-    "vite-plugin-vue-inspector": "^5.0.1",
+    "vite-plugin-vue-inspector": "^5.1.0",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-webfont-dl": "^3.9.4",
-    "vitest": "^1.5.2"
+    "vitest": "^1.6.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx ls-lint && npx lint-staged"
