--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bumpp": "^9.4.1",
     "bundle-require": "^4.1.0",
     "eslint": "^9.1.1",
+    "eslint-plugin-depend": "^0.8.0",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-vue": "^9.26.0",
