--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "dev": "vite --host --port 8080",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint:inspect": "nlx @eslint/config-inspector",
+    "lint:inspect": "npx @eslint/config-inspector",
     "preview": "vite preview --host",
     "preview-https": "serve dist",
     "test": "vitest",
     "test --coverage": "vitest run --coverage",
     "up": "taze major -I",
-    "postinstall": "nlx simple-git-hooks",
+    "postinstall": "npx simple-git-hooks",
     "ls-lint": "ls-lint",
     "release": "bumpp"
   },
