--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vueuse/core": "^11.1.0",
     "consola": "^3.2.3",
+    "floating-vue": "1.0.0-beta.19",
     "markdown-it-anchor": "^9.2.0",
     "pinia": "^2.2.4",
     "unocss": "^0.60.2",
